alterações de icones e inclusão de readme

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     	<div class="menu">
     		<ul>
     			<li><i class="fas fa-home"></i> <a href=""> PAINEL</a></li>
-    			<li><i class="fas fa-home"></i> <a href=""> CONTEÚDO</a></li>
-    			<li><i class="fas fa-home"></i> <a href=""> ESTATÍSTICAS</a></li>
-    			<li><i class="fas fa-home"></i> <a href=""> CONFIGURAÇÕES</a></li>
-    			<li><i class="fas fa-home"></i> <a href=""> DÚVIDAS</a></li>
-    			<li><i class="fas fa-home"></i> <a href=""> USUÁRIOS</a></li>
+    			<li><i class="far fa-file-alt"></i> <a href=""> CONTEÚDO</a></li>
+    			<li><i class="far fa-chart-bar"></i> <a href=""> ESTATÍSTICAS</a></li>
+    			<li><i class="fas fa-wrench"></i> <a href=""> CONFIGURAÇÕES</a></li>
+    			<li><i class="fas fa-question"></i> <a href=""> DÚVIDAS</a></li>
+    			<li><i class="fas fa-users"></i> <a href=""> USUÁRIOS</a></li>
     		</ul> <!-- FECHAMENTO LISTA MENU -->
     	</div>
     </div><!--FECHAMENTO SIDEBAR -->
